# ChangeLog for app-admin/monit
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.19 2005/04/14 14:18:32 matsuu Exp $

*monit-4.5.1 (14 Apr 2005)

  14 Apr 2005; MATSUU Takuto <matsuu@gentoo.org> +monit-4.5.1.ebuild:
  Version bumped.

*monit-4.5 (30 Mar 2005)

  30 Mar 2005; MATSUU Takuto <matsuu@gentoo.org> -monit-4.3.ebuild,
  monit-4.4.ebuild, +monit-4.5.ebuild:
  Version bumped, Bug #87233.
  Marked 4.4 stable.
  Removed old version.

*monit-4.4 (03 Jan 2005)

  03 Jan 2005; MATSUU Takuto <matsuu@gentoo.org> +monit-4.4.ebuild:
  Version bumped.

  18 Dec 2004; Michael Hanselmann <hansmi@gentoo.org> monit-4.3.ebuild:
  Stable on ppc.

  18 Dec 2004; Simon Stelling <blubb@gentoo.org> monit-4.3.ebuild:
  was testing for over 168 days, marking stable on amd64

  21 Nov 2004; Jason Wever <weeve@gentoo.org> monit-4.3.ebuild:
  Stable on sparc.

  18 Nov 2004; <pyrania@gentoo.org> monit-4.3.ebuild:
  Marked stable on x86.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> monit-4.2.1.ebuild:
  Masked monit-4.2.1.ebuild stable for ppc

*monit-4.3 (03 Jul 2004)

  03 Jul 2004; <pyrania@gentoo.org> +monit-4.3.ebuild:
  Version bump.

  01 Jun 2004; Josh Grebe <squash@gentoo.org> monit-4.2.1.ebuild:
  Stable on sparc

  13 Apr 2004; David Holm <dholm@gentoo.org> monit-4.2.1.ebuild:
  Added to ~ppc.

*monit-4.2.1 (13 Apr 2004)

  13 Apr 2004; Markus Nigbur <pyrania@gentoo.org> monit-4.1.ebuild,
  monit-4.2.1.ebuild, monit-4.2.ebuild:
  Version bump. Fixing buffer overflow vulnerability. See bug #47631.

  30 Mar 2004; Markus Nigbur <pyrania@gentoo.org> monit-4.2.ebuild:
  Marked stable due to security vulnerabilites in the HTTP interface of older
  versions.

  28 Mar 2004; <matsuu@gentoo.org> monit-4.2.ebuild:
  Version bumped.
  Added files/monit.initd.
  Added ~amd64 to KEYWORDS.

  29 Feb 2004; Markus Nigbur <pyrania@gentoo.org> monit-4.1.ebuild:
  Stable on x86.
