@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/monit
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.19 2005/04/14 14:18:32 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.20 2005/10/29 18:33:52 vanquirius Exp $
+
+*monit-4.6 (29 Oct 2005)
+
+  29 Oct 2005; Marcelo Goes <vanquirius@gentoo.org> -monit-4.5.ebuild,
+  +monit-4.6.ebuild:
+  Version bump for bug 109788. Thanks to <esi at itk dot ntnu dot no>.
 
 *monit-4.5.1 (14 Apr 2005)
 
